# URL_SHORTENER

./: Cargo.toml  Dockerfile  README.md  architecture.drawio  docker-compose.yaml
migrations/: 20240710100146_links.up.sql
src/: main.rs  routes.rs  utils.rs
src/db/: queries.rs
