[package]
name = "url_shortener_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum =  "0.5.9" 
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
nanoid = "0.4"
url ="2.2"
anyhow = "1.0.48"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
cargo-llvm-cov = "0.6.10"

